# WriteXLSX

./: .gitignore  README.md  stack.yaml  writexlsx01.cabal
src/: WriteXLSX.hs
src-commandline/: Main.hs
src/WriteXLSX/: DataframeToSheet.hs  Empty.hs
